fixed table layout data not aligning on columns

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -29,16 +29,3 @@ a {
   text-decoration: none;
   color: inherit;
 }
-
-// Screen media queries
-@mixin tablet {
-  @media (min-width: 768px) and (max-width: 1279px) {
-    @content;
-  }
-}
-
-@mixin desktop {
-  @media (min-width: 1280px) {
-    @content;
-  }
-}
